# pfe-ai-assistant

./: .gitignore  docker-compose.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
env_files/: backend.env  frontend.env
keycloak/: realm-sellynx.json
pfe-backend/: .env.local  .gitignore  demo_output.json  linkedin_session.json  main.py  pyproject.toml
pfe-backend/app/core/: auth.py  config.py  logging_config.py  types.py
pfe-backend/app/mcp/: server.py
pfe-backend/app/modules/: __init__.py
pfe-backend/app/modules/elasticsearch/: __init__.py  client.py  indexes.py  router.py
pfe-backend/app/modules/elasticsearch/services/: account_service.py  xtra_service.py
pfe-backend/app/modules/elasticsearch/tools/: client_tool.py  reference_tool.py
pfe-backend/app/scripts/: build_reference.py  seed_local_es.py
pfe-backend/app/services/documents/: document_extractor.py  local_document_loader.py
pfe-backend/app/services/elasticsearch/: account_reference_service.py  base.py  xtra_reference_service.py
pfe-backend/app/services/enrichment/: social_extractor.py
pfe-backend/app/services/scoring/: agent_orchestrator_service.py  batch_scoring_service.py  chunk_embedder_service.py  data_quality_service.py  demo_sources.py  llm_extractor_service.py  llm_reasoner_service.py  score_mapper_service.py  scoring_pipeline_service.py  semantic_retriever_service.py  semantic_validator.py  source_conflict_resolver.py
pfe-backend/app/tools/: es_client_tool.py  es_reference_tool.py  linkedin_crawl_tool.py  linkedin_playwright_tool.py  linkedin_proxycurl_tool.py  news_search_tool.py  pdf_search_tool.py  semantic_crawl_tool.py  social_media_tool.py  website_crawl_tool.py
pfe-backend/app/utils/: text_utils.py
pfe-backend/client_documents/: README.txt
pfe-frontend/: Login.vue  index.html  package-lock.json  package.json
pfe-frontend/src/: App.vue  main.js  style.css
scripts/: build_products.py  load_reference_to_es.py  products_criteria_choices.json
scripts/output/: choice.json  criteria.json  orphan_choices.json  orphan_questions.json  product_structure.json  product_target.json  products.json  (+1 more)
(+17 files in other folders)
