[project]
name = "pfe-backend"
version = "0.1.0"
description = "PFE backend"
authors = [
    {name = "rayhan"}
]
requires-python = "^3.11"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "pydantic (>=2.13.0,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "mcp (>=1.27.0,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "elasticsearch (<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
